--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Debabrata Paul - Software Engineer Portfolio</title>
     <link rel="stylesheet" href="output.css">
-    
-   
+
+
 </head>
 
 <body class="bg-white dark:bg-black text-black dark:text-white transition-colors duration-300 px-4 sm:px-6 lg:px-8">
@@ -17,16 +17,16 @@
                 <h1 class="text-xl sm:text-2xl font-bold">Debabrata</h1>
             </div>
             <div class="flex items-center gap-2">
-                <ul class="flex flex-wrap items-center gap-2">
-                    <li class="hidden md:block"><a href="#home"
+                <ul class="flex flex-wrap items-center gap-2 ">
+                    <li class="hidden lg:block"><a href="#home"
                             class="p-2 sm:p-4 hover:text-orange-500 transition-colors">Home</a></li>
-                    <li class="hidden md:block"><a href="#about"
+                    <li class="hidden lg:block"><a href="#about"
                             class="p-2 sm:p-4 hover:text-orange-500 transition-colors">About me</a></li>
-                    <li class="hidden md:block"><a href="#services"
+                    <li class="hidden lg:block"><a href="#services"
                             class="p-2 sm:p-4 hover:text-orange-500 transition-colors">Services</a></li>
-                    <li class="hidden md:block"><a href="#projects"
+                    <li class="hidden lg:block"><a href="#projects"
                             class="p-2 sm:p-4 hover:text-orange-500 transition-colors">Projects</a></li>
-                    <li class="hidden md:block"><a href="#contact"
+                    <li class="hidden lg:block"><a href="#contact"
                             class="p-2 sm:p-4 hover:text-orange-500 transition-colors">Contacts</a></li>
                     <li class="p-2">
                         <button id="darkModeToggle"
@@ -46,7 +46,7 @@
                             </svg>
                         </button>
                     </li>
-                    <li class="p-2">
+                    <li class="p-2 lg:hidden ">
                         <img src="img/menu.png" alt="">
                     </li>
                 </ul>
@@ -96,17 +96,21 @@
 
     <section id="about"
         class="my-12 sm:my-20 flex flex-col lg:flex-row-reverse justify-between items-center gap-8 p-4 max-w-7xl mx-auto ">
-         <div class="w-full lg:w-1/2 flex flex-col items-center gap-4  ">
-            <div class="bg-white rounded-full w-64 h-64 sm:w-80 sm:h-80 overflow-hidden hidden md:block ">
+        <div class="w-full lg:w-1/2 flex flex-col items-center gap-4  ">
+            <div class="bg-white rounded-full w-64 h-64 sm:w-80 sm:h-80 overflow-hidden hidden lg:block ">
                 <img src="img/circle photo.png" alt="Profile picture" class="w-full h-full object-cover">
             </div>
 
-            <div class="hidden md:block " >
+            <div class="hidden lg:block ">
                 <ul class="flex gap-4 p-2 ">
-                    <li><a href="#" class="hover:opacity-80 transition-opacity" aria-label="Facebook"><img class="w-8 h-8" src="img/F.png" alt="Facebook"></a></li>
-                    <li><a href="#" class="hover:opacity-80 transition-opacity" aria-label="Twitter"><img class="w-8 h-8" src="img/T.png" alt="Twitter"></a></li>
-                    <li><a href="#" class="hover:opacity-80 transition-opacity" aria-label="Instagram"><img class="w-8 h-8" src="img/I.png" alt="Instagram"></a></li>
-                    <li><a href="#" class="hover:opacity-80 transition-opacity" aria-label="LinkedIn"><img class="w-8 h-8" src="img/L.png" alt="LinkedIn"></a></li>
+                    <li><a href="#" class="hover:opacity-80 transition-opacity" aria-label="Facebook"><img
+                                class="w-8 h-8" src="img/F.png" alt="Facebook"></a></li>
+                    <li><a href="#" class="hover:opacity-80 transition-opacity" aria-label="Twitter"><img
+                                class="w-8 h-8" src="img/T.png" alt="Twitter"></a></li>
+                    <li><a href="#" class="hover:opacity-80 transition-opacity" aria-label="Instagram"><img
+                                class="w-8 h-8" src="img/I.png" alt="Instagram"></a></li>
+                    <li><a href="#" class="hover:opacity-80 transition-opacity" aria-label="LinkedIn"><img
+                                class="w-8 h-8" src="img/L.png" alt="LinkedIn"></a></li>
                 </ul>
             </div>
         </div>
