--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,9 @@
             <div class="flex items-center gap-2">
                 <ul class="flex flex-wrap items-center gap-2 ">
                     <li class="hidden lg:block"><a href="#home"
-                            class="p-2 sm:p-4 hover:text-orange-500 transition-colors">Home</a></li>
+                            class="p-2 sm:p-4 hover:text-orange-500 transition-colors ">Home</a></li>
                     <li class="hidden lg:block"><a href="#about"
-                            class="p-2 sm:p-4 hover:text-orange-500 transition-colors">About me</a></li>
+                            class="p-2 sm:p-4 hover:text-orange-500 transition-colors ">About me</a></li>
                     <li class="hidden lg:block"><a href="#services"
                             class="p-2 sm:p-4 hover:text-orange-500 transition-colors">Services</a></li>
                     <li class="hidden lg:block"><a href="#projects"
@@ -123,19 +123,19 @@
             </p>
             <div class="space-y-4 max-w-md mx-auto lg:mx-0">
                 <div>
-                    <label class="block mb-1">UX</label>
-                    <input class="w-full accent-orange-500" type="range" min="0" max="100" value="90">
+                    <label class="block mb-1">Fronted</label>
+                    <input class="w-full accent-orange-500" type="range" min="0" max="100" value="99">
                 </div>
                 <div>
-                    <label class="block mb-1">Web design</label>
-                    <input class="w-full accent-orange-500" type="range" min="0" max="100" value="90">
+                    <label class="block mb-1">Backnend</label>
+                    <input class="w-full accent-orange-500" type="range" min="0" max="100" value="80">
                 </div>
                 <div>
-                    <label class="block mb-1">App design</label>
-                    <input class="w-full accent-orange-500" type="range" min="0" max="100" value="90">
+                    <label class="block mb-1">APP Development</label>
+                    <input class="w-full accent-orange-500" type="range" min="0" max="100" value="70">
                 </div>
                 <div>
-                    <label class="block mb-1">Graphic Design</label>
+                    <label class="block mb-1">UI & Ux</label>
                     <input class="w-full accent-orange-500" type="range" min="0" max="100" value="90">
                 </div>
             </div>
@@ -193,17 +193,17 @@
 
         <div class="flex flex-wrap justify-center gap-2 mt-6 mb-8">
             <button
-                class="border border-gray-300 dark:border-gray-600 px-4 py-2 rounded hover:bg-orange-500 hover:text-white hover:border-orange-500 transition-colors"
+                class="border border-gray-300 dark:border-gray-600 p-2 px-4 rounded-xl hover:bg-orange-500 hover:text-white hover:border-orange-500 transition-colors"
                 data-testid="button-filter-all">ALL</button>
             <button
-                class="border border-gray-300 dark:border-gray-600 px-4 py-2 rounded hover:bg-orange-500 hover:text-white hover:border-orange-500 transition-colors"
-                data-testid="button-filter-ux">UX</button>
+                class="border  dark:border-gray-600 p-2 rounded-xl bg-orange-500 text-white border-orange-500 transition-colors"
+                data-testid="button-filter-ux">Web Site</button>
             <button
-                class="border border-gray-300 dark:border-gray-600 px-4 py-2 rounded hover:bg-orange-500 hover:text-white hover:border-orange-500 transition-colors"
-                data-testid="button-filter-web">Web page</button>
+                class="border border-gray-300 dark:border-gray-600 p-2 rounded-xl hover:bg-orange-500 hover:text-white hover:border-orange-500 transition-colors"
+                data-testid="button-filter-web">APP</button>
             <button
-                class="border border-gray-300 dark:border-gray-600 px-4 py-2 rounded hover:bg-orange-500 hover:text-white hover:border-orange-500 transition-colors"
-                data-testid="button-filter-app">App design</button>
+                class="border border-gray-300 dark:border-gray-600 p-2 rounded-xl hover:bg-orange-500 hover:text-white hover:border-orange-500 transition-colors"
+                data-testid="button-filter-app">UI & UX</button>
         </div>
 
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 sm:gap-6">
@@ -215,21 +215,21 @@
             </div>
 
             <div class="card-light border rounded-2xl bg-white text-black p-6 hover:shadow-lg transition-shadow">
-                <img src="img/I.png" alt="Project" class="w-full mb-4 rounded">
+                <img src="img/ML.png" alt="Project" class="w-full mb-4 rounded">
                 <h2 class="text-lg font-semibold mb-2">UI</h2>
                 <p class="text-sm sm:text-base">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur,
                     consequatur.</p>
             </div>
 
             <div class="card-light border rounded-2xl bg-white text-black p-6 hover:shadow-lg transition-shadow">
-                <img src="img/I.png" alt="Project" class="w-full mb-4 rounded">
+                <img src="img/ML.png" alt="Project" class="w-full mb-4 rounded">
                 <h2 class="text-lg font-semibold mb-2">UI</h2>
                 <p class="text-sm sm:text-base">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur,
                     consequatur.</p>
             </div>
 
             <div class="card-light border rounded-2xl bg-white text-black p-6 hover:shadow-lg transition-shadow">
-                <img src="img/I.png" alt="Project" class="w-full mb-4 rounded">
+                <img src="img/ML.png" alt="Project" class="w-full mb-4 rounded">
                 <h2 class="text-lg font-semibold mb-2">UI</h2>
                 <p class="text-sm sm:text-base">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur,
                     consequatur.</p>
