--- a/src/index.html
+++ b/src/index.html
@@ -97,7 +97,7 @@
     <hr class="max-w-7xl mx-auto">
 
 
-    
+
     <section id="about"
         class="my-12 sm:my-20 flex flex-col lg:flex-row-reverse justify-between items-center gap-8 p-4 max-w-7xl mx-auto ">
 
@@ -126,7 +126,7 @@
                 </div>
             </div>
         </div>
-                <div class="w-full lg:w-1/2 flex flex-col items-center gap-4  ">
+        <div class="w-full lg:w-1/2 flex flex-col items-center gap-4  ">
             <div class="bg-white rounded-full w-64 h-64 sm:w-80 sm:h-80 overflow-hidden hidden lg:block ">
                 <img src="img/circle photo.png" alt="Profile picture" class="w-full h-full object-cover">
             </div>
@@ -213,12 +213,19 @@
 
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 sm:gap-6">
             <div class="card-light border rounded-2xl bg-white text-black p-6 hover:shadow-lg transition-shadow">
-                <img src="img/I.png" alt="Project" class="w-full mb-4 rounded">
+                <img src="img/p_1_weather_check.png" alt="Project" class="w-full mb-4 rounded">
                 <h2 class="text-lg font-semibold mb-2">UI</h2>
                 <p class="text-sm sm:text-base">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur,
                     consequatur.</p>
             </div>
 
+            <div class="card-light border rounded-2xl bg-white text-black p-6 hover:shadow-lg transition-shadow">
+                <img src="img/p_2_x_clone.png" alt="Project" class="w-full mb-4 rounded">
+                <h2 class="text-lg font-semibold mb-2">UI</h2>
+                <p class="text-sm sm:text-base">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur,
+                    consequatur.</p>
+            </div>
+            <!-- 
             <div class="card-light border rounded-2xl bg-white text-black p-6 hover:shadow-lg transition-shadow">
                 <img src="img/ML.png" alt="Project" class="w-full mb-4 rounded">
                 <h2 class="text-lg font-semibold mb-2">UI</h2>
@@ -231,14 +238,7 @@
                 <h2 class="text-lg font-semibold mb-2">UI</h2>
                 <p class="text-sm sm:text-base">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur,
                     consequatur.</p>
-            </div>
-
-            <div class="card-light border rounded-2xl bg-white text-black p-6 hover:shadow-lg transition-shadow">
-                <img src="img/ML.png" alt="Project" class="w-full mb-4 rounded">
-                <h2 class="text-lg font-semibold mb-2">UI</h2>
-                <p class="text-sm sm:text-base">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur,
-                    consequatur.</p>
-            </div>
+            </div> -->
         </div>
     </section>
 
