--- a/src/index.html
+++ b/src/index.html
@@ -156,30 +156,30 @@
             delectus adipisci magni sint ea architecto quia?
         </p>
 
-        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 sm:gap-6 mt-12 sm:mt-20">
-            <div class="card-light border rounded-2xl bg-white text-black p-6 hover:shadow-lg transition-shadow">
-                <img class="w-16 sm:w-20 mb-4" src="img/web.png" alt="Website icon">
+        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 sm:gap-6 mt-12 sm:mt-20  ">
+            <div class="card-light border rounded-2xl bg-white text-black p-6 hover:shadow-lg transition-shadow text-center">
+                <img class="w-16 sm:w-20 mb-4 mx-auto block" src="img/web.png" alt="Website icon">
                 <h2 class="text-lg font-semibold mb-2">Web Site</h2>
                 <p class="text-sm sm:text-base">Lorem ipsum dolor sit amet consectetur adipisicing elit Tenetur
                     consequatur</p>
             </div>
 
-            <div class="card-light border rounded-2xl bg-white text-black p-6 hover:shadow-lg transition-shadow">
-                <img class="w-16 sm:w-20 mb-4" src="img/app.png" alt="App icon">
+            <div class="card-light border rounded-2xl bg-white text-black p-6 hover:shadow-lg transition-shadow text-center">
+                <img class="w-16 sm:w-20 mb-4 mx-auto block" src="img/app.png" alt="App icon">
                 <h2 class="text-lg font-semibold mb-2">APP</h2>
                 <p class="text-sm sm:text-base">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur,
                     consequatur.</p>
             </div>
 
-            <div class="card-light border rounded-2xl bg-white text-black p-6 hover:shadow-lg transition-shadow">
-                <img class="w-16 sm:w-20 mb-4" src="img/UI.png" alt="UI icon">
+            <div class="card-light border rounded-2xl bg-white text-black p-6 hover:shadow-lg transition-shadow text-center">
+                <img class="w-16 sm:w-20 mb-4 mx-auto block" src="img/UI.png" alt="UI icon">
                 <h2 class="text-lg font-semibold mb-2">UI</h2>
                 <p class="text-sm sm:text-base">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur,
                     consequatur.</p>
             </div>
 
-            <div class="card-light border rounded-2xl bg-white text-black p-6 hover:shadow-lg transition-shadow">
-                <img class="w-16 sm:w-20 mb-4" src="img/ML.png" alt="ML icon">
+            <div class="card-light border rounded-2xl bg-white text-black p-6 hover:shadow-lg transition-shadow text-center">
+                <img class="w-16 sm:w-20 mb-4 mx-auto block" src="img/ML.png" alt="ML icon">
                 <h2 class="text-lg font-semibold mb-2">ML</h2>
                 <p class="text-sm sm:text-base">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur,
                     consequatur.</p>
@@ -212,28 +212,28 @@
         </div>
 
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 sm:gap-6">
-            <div class="card-light border rounded-2xl bg-white text-black p-6 hover:shadow-lg transition-shadow">
-                <img src="img/p_1_weather_check.png" alt="Project" class="w-full mb-4 rounded">
+            <div class="card-light border rounded-2xl bg-white text-black p-6 hover:shadow-lg transition-shadow text-center ">
+                <img src="img/p_1_weather_check.png" alt="Project" class="w-full mb-4 rounded ">
                 <h2 class="text-lg font-semibold mb-2">UI</h2>
                 <p class="text-sm sm:text-base">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur,
                     consequatur.</p>
             </div>
 
-            <div class="card-light border rounded-2xl bg-white text-black p-6 hover:shadow-lg transition-shadow">
+            <div class="card-light border rounded-2xl bg-white text-black p-6 hover:shadow-lg transition-shadow text-center">
                 <img src="img/p_2_x_clone.png" alt="Project" class="w-full mb-4 rounded">
                 <h2 class="text-lg font-semibold mb-2">UI</h2>
                 <p class="text-sm sm:text-base">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur,
                     consequatur.</p>
             </div>
             <!-- 
-            <div class="card-light border rounded-2xl bg-white text-black p-6 hover:shadow-lg transition-shadow">
+            <div class="card-light border rounded-2xl bg-white text-black p-6 hover:shadow-lg transition-shadow text-center">
                 <img src="img/ML.png" alt="Project" class="w-full mb-4 rounded">
                 <h2 class="text-lg font-semibold mb-2">UI</h2>
                 <p class="text-sm sm:text-base">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur,
                     consequatur.</p>
             </div>
 
-            <div class="card-light border rounded-2xl bg-white text-black p-6 hover:shadow-lg transition-shadow">
+            <div class="card-light border rounded-2xl bg-white text-black p-6 hover:shadow-lg transition-shadow text-center">
                 <img src="img/ML.png" alt="Project" class="w-full mb-4 rounded">
                 <h2 class="text-lg font-semibold mb-2">UI</h2>
                 <p class="text-sm sm:text-base">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur,
