--- a/src/index.html
+++ b/src/index.html
@@ -81,14 +81,14 @@
 
             <div>
                 <ul class="flex gap-4 p-2">
-                    <li><a href="#" class="hover:opacity-80 transition-opacity" aria-label="Facebook"><img
-                                class="w-8 h-8" src="img/F.png" alt="Facebook"></a></li>
-                    <li><a href="#" class="hover:opacity-80 transition-opacity" aria-label="Twitter"><img
-                                class="w-8 h-8" src="img/T.png" alt="Twitter"></a></li>
-                    <li><a href="#" class="hover:opacity-80 transition-opacity" aria-label="Instagram"><img
-                                class="w-8 h-8" src="img/I.png" alt="Instagram"></a></li>
-                    <li><a href="#" class="hover:opacity-80 transition-opacity" aria-label="LinkedIn"><img
+                    <li><a href="https://www.linkedin.com/in/debabrata2024" target="_blank" class="hover:opacity-80 transition-opacity" ><img
                                 class="w-8 h-8" src="img/L.png" alt="LinkedIn"></a></li>
+                    <li><a href="mailto:mr.debabratapaul2006@gmail.com?subject=Hello%20Debabrata&body=Hi%20there!" target="_blank" class="hover:opacity-80 transition-opacity" ><img
+                                class="w-8 h-8" src="img/mail.png" alt="Mail"></a></li>
+                    <li><a href="https://www.instagram.com/mr.debabratapaul?igsh=YzljYTk1ODg3Zg==" target="_blank" class="hover:opacity-80 transition-opacity" ><img
+                                class="w-8 h-8" src="img/I.png" alt="Instagram"></a></li>
+                    <li><a href="https://wa.me/919093013606?text=Hello%20Debabrata%2C%20I%20want%20to%20connect%20with%20you" target="_blank" class="hover:opacity-80 transition-opacity" ><img
+                                class="w-8 h-8" src="img/w.png" alt="Whatshapp"></a></li>
                 </ul>
             </div>
         </div>
@@ -165,7 +165,7 @@
             </div>
 
             <div class="card-light border rounded-2xl bg-white text-black p-6 hover:shadow-lg transition-shadow text-center">
-                <img class="w-16 sm:w-20 mb-4 mx-auto block" src="img/app.png" alt="App icon">
+                <img class="w-16 sm:w-20 mb-4 mx-auto block h-20" src="img/app.png" alt="App icon">
                 <h2 class="text-lg font-semibold mb-2">APP</h2>
                 <p class="text-sm sm:text-base">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur,
                     consequatur.</p>
