--- a/src/index.html
+++ b/src/index.html
@@ -5,18 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Debabrata Paul - Software Engineer Portfolio</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="output.css">
 
 
 </head>
 
-<body class="bg-white dark:bg-black text-black dark:text-white transition-colors duration-300 px-4 sm:px-6 lg:px-8">
+<body class="   dark:bg-white dark:text-black transition-colors duration-300 px-4 sm:px-6 lg:px-8">
     <nav>
         <div class="flex flex-wrap justify-between items-center p-4 max-w-7xl mx-auto">
             <div class="p-2 sm:p-4">
                 <h1 class="text-xl sm:text-2xl font-bold">Debabrata</h1>
             </div>
-            <div class="flex items-center gap-2">
+            
+  <body class="bg-white text-black dark:bg-gray-900 dark:text-white transition-colors duration-500">
+            <div  id="btn" class="flex items-center gap-2">
                 <ul class="flex flex-wrap items-center gap-2 ">
                     <li class="hidden lg:block"><a href="#home"
                             class="p-2 sm:p-4 hover:text-orange-500 transition-colors ">Home</a></li>
@@ -81,14 +84,18 @@
 
             <div>
                 <ul class="flex gap-4 p-2">
-                    <li><a href="https://www.linkedin.com/in/debabrata2024" target="_blank" class="hover:opacity-80 transition-opacity" ><img
-                                class="w-8 h-8" src="img/L.png" alt="LinkedIn"></a></li>
-                    <li><a href="mailto:mr.debabratapaul2006@gmail.com?subject=Hello%20Debabrata&body=Hi%20there!" target="_blank" class="hover:opacity-80 transition-opacity" ><img
-                                class="w-8 h-8" src="img/mail.png" alt="Mail"></a></li>
-                    <li><a href="https://www.instagram.com/mr.debabratapaul?igsh=YzljYTk1ODg3Zg==" target="_blank" class="hover:opacity-80 transition-opacity" ><img
-                                class="w-8 h-8" src="img/I.png" alt="Instagram"></a></li>
-                    <li><a href="https://wa.me/919093013606?text=Hello%20Debabrata%2C%20I%20want%20to%20connect%20with%20you" target="_blank" class="hover:opacity-80 transition-opacity" ><img
-                                class="w-8 h-8" src="img/w.png" alt="Whatshapp"></a></li>
+                    <li><a href="https://www.linkedin.com/in/debabrata2024" target="_blank"
+                            class="hover:opacity-80 transition-opacity"><img class="w-8 h-8" src="img/L.png"
+                                alt="LinkedIn"></a></li>
+                    <li><a href="mailto:mr.debabratapaul2006@gmail.com?subject=Hello%20Debabrata&body=Hi%20there"
+                            target="_blank" class="hover:opacity-80 transition-opacity"><img class="w-8 h-8"
+                                src="img/mail.png" alt="Mail"></a></li>
+                    <li><a href="https://www.instagram.com/mr.debabratapaul?igsh=YzljYTk1ODg3Zg==" target="_blank"
+                            class="hover:opacity-80 transition-opacity"><img class="w-8 h-8" src="img/I.png"
+                                alt="Instagram"></a></li>
+                    <li><a href="https://wa.me/919093013606?text=Hello%20Debabrata%2C%20I%20want%20to%20connect%20with%20you"
+                            target="_blank" class="hover:opacity-80 transition-opacity"><img class="w-8 h-8"
+                                src="img/w.png" alt="Whatshapp"></a></li>
                 </ul>
             </div>
         </div>
@@ -120,6 +127,11 @@
                     <label class="block mb-1">APP Development</label>
                     <input class="w-full accent-orange-500" type="range" min="0" max="100" value="70">
                 </div>
+
+                <div>
+                    <label class="block mb-1">AOT</label>
+                    <input class="w-full accent-orange-500" type="range" min="0" max="100" value="90">
+                </div>
                 <div>
                     <label class="block mb-1">UI & Ux</label>
                     <input class="w-full accent-orange-500" type="range" min="0" max="100" value="90">
@@ -133,14 +145,18 @@
 
             <div class="hidden lg:block ">
                 <ul class="flex gap-4 p-2 ">
-                    <li><a href="#" class="hover:opacity-80 transition-opacity" aria-label="Facebook"><img
-                                class="w-8 h-8" src="img/F.png" alt="Facebook"></a></li>
-                    <li><a href="#" class="hover:opacity-80 transition-opacity" aria-label="Twitter"><img
-                                class="w-8 h-8" src="img/T.png" alt="Twitter"></a></li>
-                    <li><a href="#" class="hover:opacity-80 transition-opacity" aria-label="Instagram"><img
-                                class="w-8 h-8" src="img/I.png" alt="Instagram"></a></li>
-                    <li><a href="#" class="hover:opacity-80 transition-opacity" aria-label="LinkedIn"><img
-                                class="w-8 h-8" src="img/L.png" alt="LinkedIn"></a></li>
+                    <li><a href="https://www.linkedin.com/in/debabrata2024" target="_blank"
+                            class="hover:opacity-80 transition-opacity"><img class="w-8 h-8" src="img/l.png"
+                                alt="LinkedIn"></a></li>
+                    <li><a href="mailto:mr.debabratapaul2006@gmail.com?subject=Hello%20Debabrata&body=Hi%20there"
+                            target="_blank" class="hover:opacity-80 transition-opacity"><img class="w-8 h-8"
+                                src="img/mail.png" alt="mail"></a></li>
+                    <li><a href="https://www.instagram.com/mr.debabratapaul?igsh=YzljYTk1ODg3Zg==" target="_blank"
+                            class="hover:opacity-80 transition-opacity"><img class="w-8 h-8" src="img/I.png"
+                                alt="Instagram"></a></li>
+                    <li><a href="https://wa.me/919093013606?text=Hello%20Debabrata%2C%20I%20want%20to%20connect%20with%20you"
+                            target="_blank" class="hover:opacity-80 transition-opacity"><img class="w-8 h-8"
+                                src="img/w.png" alt="Whatshapp"></a></li>
                 </ul>
             </div>
         </div>
@@ -157,33 +173,43 @@
         </p>
 
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 sm:gap-6 mt-12 sm:mt-20  ">
-            <div class="card-light border rounded-2xl bg-white text-black p-6 hover:shadow-lg transition-shadow text-center">
+            <div
+                class="  card-light border rounded-2xl bg-white text-black p-6 hover:bg-amber-600  transition-shadow text-center">
                 <img class="w-16 sm:w-20 mb-4 mx-auto block" src="img/web.png" alt="Website icon">
                 <h2 class="text-lg font-semibold mb-2">Web Site</h2>
                 <p class="text-sm sm:text-base">Lorem ipsum dolor sit amet consectetur adipisicing elit Tenetur
                     consequatur</p>
             </div>
 
-            <div class="card-light border rounded-2xl bg-white text-black p-6 hover:shadow-lg transition-shadow text-center">
+            <div
+                class="card-light border rounded-2xl bg-white text-black p-6 hover:shadow-lg transition-shadow text-center">
                 <img class="w-16 sm:w-20 mb-4 mx-auto block h-20" src="img/app.png" alt="App icon">
                 <h2 class="text-lg font-semibold mb-2">APP</h2>
                 <p class="text-sm sm:text-base">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur,
                     consequatur.</p>
             </div>
 
-            <div class="card-light border rounded-2xl bg-white text-black p-6 hover:shadow-lg transition-shadow text-center">
+            <div
+                class="card-light border rounded-2xl bg-white text-black p-6 hover:shadow-lg transition-shadow text-center">
+                <img class="w-16 sm:w-20 mb-4 mx-auto block" src="img/UI.png" alt="UI icon">
+                <h2 class="text-lg font-semibold mb-2">UI</h2>
+                <p class="text-sm sm:text-base">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur,
+                    consequatur.</p>
+            </div>
+            <div
+                class="card-light border rounded-2xl bg-white text-black p-6 hover:shadow-lg transition-shadow text-center">
                 <img class="w-16 sm:w-20 mb-4 mx-auto block" src="img/UI.png" alt="UI icon">
                 <h2 class="text-lg font-semibold mb-2">UI</h2>
                 <p class="text-sm sm:text-base">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur,
                     consequatur.</p>
             </div>
 
-            <div class="card-light border rounded-2xl bg-white text-black p-6 hover:shadow-lg transition-shadow text-center">
+            <!-- <div class="card-light border rounded-2xl bg-white text-black p-6 hover:shadow-lg transition-shadow text-center">
                 <img class="w-16 sm:w-20 mb-4 mx-auto block" src="img/ML.png" alt="ML icon">
                 <h2 class="text-lg font-semibold mb-2">ML</h2>
                 <p class="text-sm sm:text-base">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur,
                     consequatur.</p>
-            </div>
+            </div> -->
         </div>
     </section>
 
@@ -208,37 +234,43 @@
                 data-testid="button-filter-web">APP</button>
             <button
                 class="border border-gray-300 dark:border-gray-600 p-2 rounded-xl hover:bg-orange-500 hover:text-white hover:border-orange-500 transition-colors"
+                data-testid="button-filter-web">AOT</button>
+            <button
+                class="border border-gray-300 dark:border-gray-600 p-2 rounded-xl hover:bg-orange-500 hover:text-white hover:border-orange-500 transition-colors"
                 data-testid="button-filter-app">UI & UX</button>
         </div>
 
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 sm:gap-6">
-            <div class="card-light border rounded-2xl bg-white text-black p-6 hover:shadow-lg transition-shadow text-center ">
+            <div class="card-light border rounded-2xl bg-white text-black p-6  transition-shadow text-center ">
                 <img src="img/p_1_weather_check.png" alt="Project" class="w-full mb-4 rounded ">
-                <h2 class="text-lg font-semibold mb-2">UI</h2>
+                <h2 class="text-lg font-semibold mb-2">Weather Checking site</h2>
                 <p class="text-sm sm:text-base">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur,
                     consequatur.</p>
             </div>
 
-            <div class="card-light border rounded-2xl bg-white text-black p-6 hover:shadow-lg transition-shadow text-center">
-                <img src="img/p_2_x_clone.png" alt="Project" class="w-full mb-4 rounded">
-                <h2 class="text-lg font-semibold mb-2">UI</h2>
-                <p class="text-sm sm:text-base">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur,
-                    consequatur.</p>
-            </div>
-            <!-- 
-            <div class="card-light border rounded-2xl bg-white text-black p-6 hover:shadow-lg transition-shadow text-center">
-                <img src="img/ML.png" alt="Project" class="w-full mb-4 rounded">
-                <h2 class="text-lg font-semibold mb-2">UI</h2>
-                <p class="text-sm sm:text-base">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur,
-                    consequatur.</p>
+            <div
+                class=" group  card-light border rounded-2xl bg-white text-black p-6  transition-shadow text-center hover:bg-amber-600 max-h-[400px] ">
+                <img src="img/p_1_weather_check.png" alt="Project" class="w-full mb-4 rounded">
+                <h2 class="text-lg font-semibold mb-2">x-clone</h2>
+                <p class="text-sm   group-hover:hidden">Lorem ipsum, dolor sit amet consectetur adipisicing
+                    elit. Tenetur,
+                    consequatur.
+                </p>
+
+                <div class="  opacity-0 group-hover:opacity-100 gap-2 p-4 ">
+                    <!-- <div>
+
+                        <button class="p-2 border rounded-xl"><a href="#">Github</a></button>
+                        <button class="p-2 border rounded-xl"><a href="#">Live Demo</a></button>
+                    </div>
+                    <div class="my-2">
+                        <button class="p-2 border rounded-xl"><a href="#">Watch Demo </a></button>
+                    </div> -->
+                </div>
             </div>
 
-            <div class="card-light border rounded-2xl bg-white text-black p-6 hover:shadow-lg transition-shadow text-center">
-                <img src="img/ML.png" alt="Project" class="w-full mb-4 rounded">
-                <h2 class="text-lg font-semibold mb-2">UI</h2>
-                <p class="text-sm sm:text-base">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur,
-                    consequatur.</p>
-            </div> -->
+
+
         </div>
     </section>
 
@@ -263,7 +295,8 @@
     <footer class="text-center my-12 sm:my-20 text-sm sm:text-base">
         &copy;2025 all copyright reserved
     </footer>
-
+<script src="script.js"></script>
 </body>
+
 
 </html>
