--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
 </head>
 
-<body class="   dark:bg-white dark:text-black transition-colors duration-300 px-4 sm:px-6 lg:px-8">
+<body id="bodymain" class=" dark:bg-black dark:text-white transition-colors duration-300 px-4 sm:px-6 lg:px-8">
     <nav>
         <div class="flex flex-wrap justify-between items-center p-4 max-w-7xl mx-auto">
             <div class="p-2 sm:p-4">
@@ -32,16 +32,16 @@
                     <li class="hidden lg:block"><a href="#contact"
                             class="p-2 sm:p-4 hover:text-orange-500 transition-colors">Contacts</a></li>
                     <li class="p-2">
-                        <button id="darkModeToggle"
+                        <button  id="darkModeToggle"
                             class="p-2 rounded-lg hover:bg-gray-200 dark:hover:bg-gray-800 transition-colors"
                             data-testid="button-dark-mode-toggle" aria-label="Toggle dark mode">
-                            <svg id="sunIcon" class="w-6 h-6 hidden dark:block" fill="none" stroke="currentColor"
+                            <svg onclick="light()" id="sunIcon" class="w-6 h-6 " fill="none" stroke="currentColor"
                                 viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                     d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z">
                                 </path>
                             </svg>
-                            <svg id="moonIcon" class="w-6 h-6 block dark:hidden" fill="none" stroke="currentColor"
+                            <svg onclick="dark()"  id="moonIcon" class="w-6 h-6 opacity-0 " fill="none" stroke="currentColor"
                                 viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                     d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z">
@@ -258,14 +258,14 @@
                 </p>
 
                 <div class="  opacity-0 group-hover:opacity-100 gap-2 p-4 ">
-                    <!-- <div>
+                    <div>
 
                         <button class="p-2 border rounded-xl"><a href="#">Github</a></button>
                         <button class="p-2 border rounded-xl"><a href="#">Live Demo</a></button>
                     </div>
                     <div class="my-2">
                         <button class="p-2 border rounded-xl"><a href="#">Watch Demo </a></button>
-                    </div> -->
+                    </div>
                 </div>
             </div>
 
