--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
                             <li  onclick="menu1()" class="p-2 lg:hidden ">
                                 <img id="imgg" src="img/menu.png" alt="">
                             </li>
-                            <ul id="menu" class="  hidden items-center gap-2">
+                            <ul id="menu" class=" absolute  hidden items-center gap-2">
                                 <li class=""><a href="#home"
                                         class="p-2 sm:p-4 hover:text-orange-500 transition-colors ">Home</a></li>
                                 <li class=""><a href="#about"
